Bug 151818 - FILEOPEN Font color is white instead of colored in XLSX SmartArt
Summary: FILEOPEN Font color is white instead of colored in XLSX SmartArt
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0
Keywords:
Depends on:
Blocks:
 
Reported: 2022-10-29 20:07 UTC by Regina Henschel
Modified: 2022-11-03 13:19 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
SmartArt with preset colors (22.15 KB, application/zip)
2022-10-29 20:07 UTC, Regina Henschel
Details
Screenshot comparing Excel and Calc (30.23 KB, image/png)
2022-10-29 20:08 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2022-10-29 20:07:49 UTC
Created attachment 183330 [details]
SmartArt with preset colors

SmartArt is shown in correct size after the fix for bug 83671. Now it becomes visible, that SmartArt in xlsx file has the same problem as reported in bug 54095 for docx.

Open attached file. The rectangles should show the text One, Two, Three. The text is there, but it is white on white background. The text should be in dark blue, see attached screenshot.
Comment 1 Regina Henschel 2022-10-29 20:08:31 UTC
Created attachment 183331 [details]
Screenshot comparing Excel and Calc
Comment 2 m_a_riosv 2022-10-29 20:25:34 UTC
Confirmed
Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 17dfc9a9da009cc23d2222e3fb4e2cef9c97d581
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded Jumbo

And clear formatting doesn't go in that text, although there is no new style about it.
Comment 3 Commit Notification 2022-10-30 12:30:58 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4d15adebcc492112ca88e36aa7e8799b62d86466

tdf#151818 xlsx SmartArt import, apply theme text color

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 m_a_riosv 2022-11-03 13:19:16 UTC
Verified
Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 643fec7cf7a81bf8c89a8efd47c0310b38f9076c
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded Jumbo