tdf#151818 xlsx SmartArt import, apply theme text color

Similar as patch 2406ba67 for tdf#54095 but now for import of
SmartArt objects in xlsx files.

Change-Id: I12ca8c476fb9d141cef991e8e98ad13b53c70613
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142027
Tested-by: Jenkins
Reviewed-by: Regina Henschel <rb.henschel@t-online.de>